src/components/QuestionsArea/QuestionsArea.scss
@import '../../assets/scss/variables';
@import '../../assets/scss/breakpoints-mixin';
.questions {
  width: 100%;
  &-navigation {
    display: flex;
    align-items: flex-end;
    justify-content: center;
    flex-direction: column;
    gap: 0.25rem;
    padding-inline-end: 0.5rem;
    &__prev,
    &__next {
      padding: 0;
      border: none;
      background-color: transparent;
      &:hover {
        cursor: pointer;
      }
    }
  }

  .single-question {
    &__prev {
      display: flex;
      align-items: center;
      justify-content: flex-start;
      gap: 0.25rem;
      background-color: $background-light;
      border: none;
      font-size: 0.813rem;
      margin-bottom: 1rem;
      &:hover {
        cursor: pointer;
      }
      p {
        color: $text-light;
        font-weight: 500;
      }
    }
    &__header {
      margin-bottom: 3rem;
    }
    &__title {
      font-size: 1.25rem;
      color: $text-main;
      margin-bottom: 0.5rem;
    }
    &__sub-title {
      font-size: 0.813rem;
      color: $text-light;
    }
    &__lists-wrapper {
      display: flex;
      justify-content: space-between;
      align-items: stretch;
      flex-wrap: wrap;
    }
    &__options-list {
      display: flex;
      flex-direction: column;
      width: 100%;
      max-width: 432px;
      & > div {
        height: 100%;
      }
    }

    &__ranked-list {
      display: flex;
      flex-direction: column;
      width: 100%;
      max-width: 432px;
      align-items: flex-end;
      position: relative;
      & > div:first-child {
        height: 100%;
        width: 100%;
        border-radius: 5px;
        z-index: 1;
      }
    }

    &__reset {
      display: flex;
      align-items: center;
      gap: 0.25rem;
      padding: 0.375rem;
      position: absolute;
      inset-inline-end: 0;
      bottom: -1.5rem;
      z-index: 3;
      p {
        color: $text-light;
        font-size: 0.813rem;
        font-weight: 500;
      }
      &:hover {
        cursor: pointer;
      }
    }
    &__placeholders {
      position: absolute;
      top: 0;
      inset-inline-start: 0;
      width: 100%;
    }

    &__next {
      background-color: $accent-main;
      color: white;
      font-size: 1rem;
      font-weight: 500;
      padding: 0.5rem 1rem;
      border-radius: 0.125rem;
      display: inline-block;
      margin-top: 1rem;
      border: none;
      box-shadow: none;
      outline: none;
      &:hover {
        cursor: pointer;
        background-color: darken($accent-main, 3);
      }
    }
  }
}
@include breakpoint(lg) {
  .questions {
    .single-question {
      &__lists-wrapper {
        justify-content: flex-start;
        align-items: center;
      }
      &__options-list {
        max-width: 100%;
        border-bottom: 1px dashed $accent-main;
        margin-bottom: 1rem;
      }
      &__ranked-list {
        height: 100%;
        min-width: 100%;
        & > div:first-child {
          width: 100%;
          min-height: 10rem;
        }
      }
      &__placeholders {
        width: 100%;
      }
      &__next {
        margin-bottom: 1rem;
      }
    }
  }
}

